* Bug #43528: Adjust alignment of search icon in SearchBox widget
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-4.2-0@77450 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-web/css/site/widgets.styl
+++ b/management/univention-web/css/site/widgets.styl
@@ -100,8 +100,8 @@
 
 .umc .umcSearchBox .umcSearchIcon
 	position: absolute
-	right: 3px
-	bottom: 3px
+	right: 7px
+	bottom: 5px
 	z-index: 1
 
 	opacity: 1
